Extract allowed origins to env