@@ -1,22 +1,31 @@
 package com.survey.api.configuration;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 @Configuration
 public class CorsConfig {
+
+    @Value("${ALLOWED_ORIGINS:*}")
+    private String allowedOrigins;
 
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOriginPatterns(List.of("https://*.urbeat.site", "http://localhost:*"));
+        if ("*".equals(allowedOrigins)){
+            config.setAllowedOriginPatterns(Collections.singletonList("*"));
+        } else {
+            config.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
+        }
 
         config.addAllowedMethod("GET");
         config.addAllowedMethod("POST");
